[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://MAIN_HUD.gd" type="Script" id=2]
[ext_resource path="res://fonts/Hellofreeday DEMO.otf" type="DynamicFontData" id=3]
[ext_resource path="res://img/hockeyStadium_blurred.png" type="Texture" id=4]
[ext_resource path="res://Game.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 150
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="MAIN_HUD" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="ExtraButton" type="Button" parent="MAIN_HUD"]
margin_left = 749.0
margin_top = 495.0
margin_right = 1144.0
margin_bottom = 650.0
custom_fonts/font = SubResource( 1 )
text = "ExtraButton"

[node name="SettingButton" type="Button" parent="MAIN_HUD"]
margin_left = 280.656
margin_top = 498.552
margin_right = 720.656
margin_bottom = 655.552
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="StartButton" type="Button" parent="MAIN_HUD"]
margin_left = 409.555
margin_top = 195.038
margin_right = 1042.56
margin_bottom = 449.038
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="MainMenu_background" type="AnimatedSprite" parent="."]
position = Vector2( 681.169, 383.314 )
scale = Vector2( 0.714503, 0.714131 )
z_index = 1
frames = SubResource( 4 )

[node name="Game" parent="." instance=ExtResource( 5 )]
[connection signal="start_game" from="MAIN_HUD" to="Game" method="_on_MAIN_HUD_start_game"]
[connection signal="pressed" from="MAIN_HUD/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="MAIN_HUD/StartButton" to="MAIN_HUD" method="_on_StartButton_pressed"]
[connection signal="pressed" from="MAIN_HUD/StartButton" to="." method="_on_StartButton_pressed"]
